stats_block_default_notch_override fix

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
@@ -73,7 +73,7 @@
             {% endif %}
 
             {% if stats_block %}
-                {% include "patterns/organisms/stat-block/stat-block.html" with stats_block=stats_block %}
+                {% include "patterns/organisms/stat-block/stat-block.html" with stats_block=stats_block stats_block_default_notch_override=True %}
             {% endif %}
 
              {% if related_pages_highlights %}
