--- a/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
+++ b/rca/project_styleguide/templates/patterns/organisms/stat-block/stat-block.html
@@ -1,8 +1,8 @@
 {% load wagtailimages_tags %}
 {% image stats_block.background_image max-1000x500 as bg_image %}
-<section class="section section--stat-block {% if stats_block.default_notch_override %}section--stat-block-notch-override{% else %}section--opposite-notch{% endif %} bg bg--stat-block bg--dark" data-stat-block style="--stat-block-bg-image: url('{{ bg_image.url }}')">
+<section class="section section--stat-block {% if stats_block_default_notch_override %}section--stat-block-notch-override{% else %}section--opposite-notch{% endif %} bg bg--stat-block bg--dark" data-stat-block style="--stat-block-bg-image: url('{{ bg_image.url }}')">
 
-    <div class="section__notch {% if stats_block.default_notch_override %}{% else %}section__notch--transparent section__notch--opposite{% endif %}">
+    <div class="section__notch {% if not stats_block_default_notch_override %}section__notch--transparent section__notch--opposite{% endif %}">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
     <div class="section__row stat-block {% if stats_block.statistics|length > 3 %}stat-block--large{% endif %}">
@@ -54,7 +54,7 @@
         </div>
     {% endif %}
 
-    <div class="section__notch {% if stats_block.default_notch_override %}section__notch--opposite{% endif %}">
+    <div class="section__notch {% if stats_block_default_notch_override %}section__notch--opposite{% endif %}">
         <div class="section__notch-fill section__notch-fill--second-col"></div>
     </div>
 </section>
