Fixing overflow issue

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--innovation.html
@@ -77,7 +77,7 @@
             {% endif %}
 
              {% if related_pages_highlights %}
-                <section class="landing-page__top section section--start bg bg--light">
+                <section class="landing-page__top section section--opposite-notch section--start bg bg--light">
 
                     <div class="section__row section__row--last-large research-highlights">
                         {% if page.highlights_title %}
