--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -53,7 +53,7 @@
                 <div class="grid">
                     <div class="section__action">
                         <a class="link link--secondary link--link body body--one" href="{{ related_section.link.url }}">
-                            <span class="link__label">{{ related_section.link.title }}</span>
+                            <span class="link__label">{% firstof related_section.link.title 'Read more' %}</span>
                             <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                         </a>
                     </div>
