Guide page general feedbakc fixes

--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -70,7 +70,7 @@
             {% if page.further_information %}
                 <section class="section bg bg--dark">
                 <div class="section__row short-course-accordion section__row--last">
-                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.further_information course_type="short" %}
+                        {% include "patterns/organisms/accordion-block/accordion-block.html" with accordion_id='1' accordions=page.further_information course_type="short" title="On this page" %}
                 </div>
                 </section>
             {% endif %}
