--- a/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/image_block.html
+++ b/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/image_block.html
@@ -1,5 +1,9 @@
 {% load wagtailimages_tags %}
 
-<div class="image image--full"> 
-    {% image value.image width-878 %}
+<div class="image image--full">
+    {% image value.image fill-800x600 as my_image %}
+    <img src="{{ my_image.url }}" width="{{ my_image.width }}" height="{{ my_image.height }}" alt="{{ my_image.image.alt}}" title="{{ my_image.image.title }}">
+    {% if value.caption %}
+        <p class="image-caption-link">{{ value.caption }}</p>
+    {% endif %}
 </div>
