Fix the reset links

--- a/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
+++ b/rca/project_styleguide/templates/patterns/molecules/categories-tablist/categories-tablist.html
@@ -21,7 +21,7 @@
         {% endfor %}
         {% if reset %}
             <div class="categories-tablist__tab categories-tablist__tab--reset">
-                {% include "patterns/atoms/reset/reset.html" with modifier="hidden" %}
+                {% include "patterns/atoms/reset/reset.html" with value=reset modifier="hidden" %}
             </div>
         {% endif %}
     </div>
