Fixing visual glitch

--- a/rca/static_src/sass/components/_filter-tab-options.scss
+++ b/rca/static_src/sass/components/_filter-tab-options.scss
@@ -53,6 +53,10 @@
 
     &__item {
         margin-bottom: $gutter;
+
+        @include media-query(large) {
+            overflow: hidden;
+        }
     }
 
     &__link {
