--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -32,7 +32,7 @@
             </div>
         </header>
 
-        <form class="page__content js-detect-sticking js-tabs" id="results" method="GET" URL="#results">
+        <form class="page__content js-detect-sticking js-tabs" id="results" method="get" action="#results">
 
             <section class="section section--opposite-notch bg bg--dark filter-bar filter-bar--large" data-filter-bar>
                 <div class="section__notch section__notch--opposite">
