--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -58,11 +58,11 @@
 
                 {% endfor %}
             </div>
-            {% if related_section.link.url and related_section.link.title  %}
+            {% if related_section.link.url and related_section.link.title or related_section.page_link  %}
                 <div class="grid">
                     <div class="section__action">
-                        <a class="link link--secondary link--link body body--one" href="{{ related_section.link.url }}">
-                            <span class="link__label">{% firstof related_section.link.title 'Read more' %}</span>
+                        <a class="link link--secondary link--link body body--one" href="{% firstof related_section.link.url related_section.page_link.url %}">
+                            <span class="link__label">{% firstof related_section.link.title related_section.page_link.title 'Read more' %}</span>
                             <svg width="12" height="8" class="link__icon" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
                         </a>
                     </div>
