Use item instead of card (prevent confusion in the template)

--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -99,7 +99,7 @@
                         {% if results %}
                             {% for item in results %}
                                 <div class="results__item layout__span-two layout__@medium-span-one">
-                                    {% include "patterns/molecules/card/card--project.html" with card=item %}
+                                    {% include "patterns/molecules/card/card--project.html" %}
                                 </div>
                             {% endfor %}
                         {% else %}
