--- a/rca/project_styleguide/templates/patterns/molecules/card/card--project.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--project.html
@@ -1,8 +1,8 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 <div class="card card--project{% if item.image %} card--image{% endif %}{% if modifier %} card--{{ modifier }}{% endif %}">
     {% if item.image %}
-        {% image card.image fill-80x58 as image_small %}
-        {% image card.image fill-392x284 as image_large %}
+        {% image item.image fill-80x58 as image_small %}
+        {% image item.image fill-392x284 as image_large %}
     {% endif %}
     <div class="card__container">
         {% if item.link %}<a href="{{ item.link }}" class="card__image-container" aria-label="{{ item.title }}">{% endif %}
