--- a/rca/project_styleguide/templates/patterns/molecules/card/card.html
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card.html
@@ -1,8 +1,8 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 <div class="card{% if item.image %} card--image{% endif %}{% if item.person %} card--person{% endif %}{% if modifier %} card--{{ modifier }}{% endif %}">
     {% if item.image %}
-        {% image card.image fill-80x46 as image_small %}
-        {% image card.image fill-828x472 as image_large %}
+        {% image item.image fill-80x46 as image_small %}
+        {% image item.image fill-828x472 as image_large %}
     {% endif %}
     <div class="card__container">
         {% if item.link and item.image %}<a href="{{ item.link }}" class="card__image-container" aria-label="{{ item.title }}">{% endif %}
