--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes--large.html
@@ -25,7 +25,7 @@
                     <p class="related-content__degree body body--one">{% firstof related_item.degree_level related_item.programme_type %}</p>
                 </div>
                 <p class="related-content__copy body body--one">
-                    {% firstof related_item.programme_description_subtitle related_item.introduction %}
+                    {% firstof related_item.programme_description_subtitle related_item.introduction related_item.listing_summary %}
                 </p>
                 {% image related_item.hero_image fill-500x500 as programme_image %}
                 <div class="related-content__image-container">
