--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedprogrammes.html
@@ -41,7 +41,7 @@
                         {% endif %}
                     </div>
                     <p class="related-content__copy body body--two">
-                        {% firstof related_item.programme_description_subtitle related_item.introduction %}
+                        {% firstof related_item.programme_description_subtitle related_item.introduction related_item.listing_summary %}
                     </p>
                     {% image related_item.hero_image fill-500x500 as programme_image %}
                     <div class="related-content__image-container">
