Key details space so it doens’t sit up against images in main col

--- a/rca/static_src/sass/components/_key-details.scss
+++ b/rca/static_src/sass/components/_key-details.scss
@@ -112,6 +112,10 @@
     &__list {
         @include font-size(xxs);
         margin-bottom: ($gutter * 2);
+
+        @include media-query(large) {
+            padding-right: $gutter;
+        }
     }
 
     &__list-item {
