--- a/rca/project_styleguide/templates/patterns/pages/errors/404.html
+++ b/rca/project_styleguide/templates/patterns/pages/errors/404.html
@@ -2,6 +2,7 @@
 {% load wagtailcore_tags wagtailsettings_tags %}
 
 {% block body_class %}app--404{% endblock %}
+{% block header_class %}theme-light{% endblock %}
 
 {% block title %}{{ settings.utils.SystemMessagesSettings.title_404 }}{% endblock %}
 
