--- a/rca/project_styleguide/templates/patterns/pages/guide/guide.html
+++ b/rca/project_styleguide/templates/patterns/pages/guide/guide.html
@@ -49,7 +49,7 @@
                     <div class="section__notch-fill section__notch-fill--second-col"></div>
                 </div>
 
-                <div class="section__row {% if not page.related_staff %}section__row--last{% endif %} section__row--first grid">
+                <div class="section__row {% if not related_staff %}section__row--last{% endif %} section__row--first grid">
                     <div class="streamfield rich-text layout__start-one layout__span-two layout__@large-start-two layout__@large-span-three">
                         {% include "patterns/molecules/streamfield/stream_block.html" with value=page.body %}
                     </div>
@@ -57,7 +57,6 @@
 
                 {% if related_staff %}
                     <div class="section__row section__row--first section__row--last" id="staff">
-                    {% comment %} TODO Needs wrapping {% endcomment %}
                         {% include "patterns/organisms/people-module/people-module.html" with people=related_staff title="Staff" %}
                     </div>
                 {% endif %}
