Only apply margin class if research_spaces and projects dont exist

--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -33,7 +33,7 @@
 
             <section class="research-top section bg bg--dark">
 
-                <div class="section__row research-centre-overview">
+                <div class="section__row research-centre-overview {% if not research_spaces and not projects %}research-centre-overview--no-margin{% endif %}">
                     <div class="section__content grid">
                         <div class="research-centre-overview__content">
                             <div class="research-centre-overview__body">
