Just use title, .title is a title case filter

--- a/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/anchor_heading_block.html
+++ b/rca/project_styleguide/templates/patterns/molecules/streamfield/blocks/anchor_heading_block.html
@@ -1,1 +1,1 @@
-<h2 class="anchor-heading" id="{{ value.title|slugify }}">{{ value.title }}</h2>
+<h2 class="anchor-heading" id="{{ value|slugify }}">{{ value }}</h2>
