Adding min-height to related programmes - to allow for 1 featured item

--- a/rca/static_src/sass/components/_related-content.scss
+++ b/rca/static_src/sass/components/_related-content.scss
@@ -138,6 +138,10 @@
 
     &__group {
         margin-bottom: ($gutter * 3);
+
+        @include media-query(large) {
+            min-height: 450px;
+        }
     }
 
     &__heading,
