Min height to stop controls butting up again image carousel

--- a/rca/static_src/sass/components/_slide.scss
+++ b/rca/static_src/sass/components/_slide.scss
@@ -27,6 +27,7 @@
 
         @include media-query(large) {
             display: flex;
+            min-height: 70px; // ensure controls don't butt up against the image
         }
     }
 
