Adding labels for reference (dev only), Fixing typo and add space on external

--- a/rca/project_styleguide/templates/patterns/molecules/links/links.html
+++ b/rca/project_styleguide/templates/patterns/molecules/links/links.html
@@ -35,25 +35,25 @@
     <div>
         {% include 'patterns/atoms/link-secondary/link-secondary--download.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary">
         {% include 'patterns/atoms/link-tertiary/link-tertiary.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary down">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--down.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary up">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--up.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary link">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--link.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary external">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--external.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary download">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--download.html' %}
     </div>
-    <div>
+    <div aria-label="link tertiary back">
         {% include 'patterns/atoms/link-tertiary/link-tertiary--back.html' %}
     </div>
 </div>
