Don’t show research news if no slides

--- a/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
+++ b/rca/project_styleguide/templates/patterns/pages/researchcentre/research_centre.html
@@ -154,7 +154,7 @@
             {% endif %}
 
 
-            {% if research_news %}
+            {% if research_news.slides %}
                 <section class="section bg bg--dark">
                     <div class="section__row section__row--first section__row--last-large">
                         <div class="partnerships">
