Profile teaser hover underline placement fix

--- a/rca/static_src/sass/components/_profile-teaser.scss
+++ b/rca/static_src/sass/components/_profile-teaser.scss
@@ -45,6 +45,7 @@
     }
 
     &__heading {
+        display: inline-block;
         position: relative;
         word-break: break-word; // ensure long names wrap
         margin-bottom: ($gutter / 4);
