Contact link fix

--- a/rca/static_src/sass/components/_contact.scss
+++ b/rca/static_src/sass/components/_contact.scss
@@ -59,6 +59,8 @@
 
         @include media-query(large) {
             margin-top: ($gutter * 10);
+            justify-content: space-between;
+            max-width: 220px !important; // sass-lint:disable-line no-important
         }
     }
 
