Adding bg colour to notch logic

--- a/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.html
+++ b/rca/project_styleguide/templates/patterns/pages/landingpage/landing_page--enterprise.html
@@ -74,7 +74,7 @@
                 </section>
             
             {% else %}
-                <section class="landing-page__top>
+                <section class="landing-page__top bg bg--dark">
 
                     <div class="section__notch">
                         <div class="section__notch-fill section__notch-fill--third-col"></div>
