Hover on guide navigation

--- a/rca/static_src/sass/components/_anchor-nav-item.scss
+++ b/rca/static_src/sass/components/_anchor-nav-item.scss
@@ -2,6 +2,8 @@
     margin-bottom: ($gutter / 2);
 
     &__link {
+        @include underline-hover();
+        position: relative;
         color: $color--white;
     }
 }
