--- a/rca/static_src/sass/components/_anchor-nav.scss
+++ b/rca/static_src/sass/components/_anchor-nav.scss
@@ -23,4 +23,10 @@
             margin-bottom: ($gutter * 1.5);
         }
     }
+
+    &__items {
+        @include media-query(large) {
+            padding-right: $gutter;
+        }
+    }
 }
