--- a/rca/static_src/sass/main.scss
+++ b/rca/static_src/sass/main.scss
@@ -105,6 +105,7 @@
 @import 'components/slideshow';
 @import 'components/social-item';
 @import 'components/staff-body';
+@import 'components/staff-overview';
 @import 'components/staggered-cards';
 @import 'components/step-item';
 @import 'components/stat-block';
