--- a/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
+++ b/rca/project_styleguide/templates/patterns/pages/project/project_listing.html
@@ -45,10 +45,10 @@
                             <button class="filter-tab-options__button link link--primary layout__start-two layout__span-one layout__@large-start-four" data-filter-submit>
                                 <span class="link__label">Show results</span>
                                 <svg width="12" height="8" class="link__icon link__icon--rotated" aria-hidden="true"><use xlink:href="#arrow"></use></svg>
-                            </button>            
+                            </button>
                         </div>
                     </div>
-                    
+
                 </div>
             </section>
 
@@ -85,7 +85,7 @@
 
                 {% if page.feature and page.results %}
                     <div class="section__row">
-                        {% include "patterns/organisms/image-video-block/image-video-block.html" with heading=false subheading=page.feature.sub_heading meta_heading=page.feature.meta_heading image=page.feature.image has_meta=True meta_copy=page.feature.page_summary href=page.feature.href caption=false video=false school=page.feature.school %}
+                        {% include "patterns/organisms/image-video-block/image-video-block.html" with heading=false subheading=page.feature.sub_heading meta_heading=false image=page.feature.image has_meta=True meta_copy=page.feature.page_summary href=page.feature.href caption=false video=false school=page.feature.school %}
                     </div>
                 {% endif %}
 
@@ -115,8 +115,8 @@
 
             </section>
 
-            
-        
+
+
         </form>
 
     </div>
